# qml_studio

./: .gitignore  LICENSE  README.md
docs/: QML Learning Plan.md  ai_memory_recapitulate.md  qml_troubleshooting.md
projects/week01_basic_ui/specops01_hello_qml/: CMakeLists.txt  Main.qml  README.md  main.cpp
qml_journey/: week01_basic_ui.md
